<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginRight="10.0dip"
            app:cardBackgroundColor="@color/form_fondo"
            app:cardCornerRadius="7.0dip"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="10.0dip">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:gravity="center"
                    android:text="@string/form_header"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_txv1"
                    android:textSize="@dimen/tam_letra"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_est"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre Estudiante"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_txv2"
                    android:textSize="@dimen/tam_letra"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_inst"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre Tecnologico"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/form_txv3"
                        android:textSize="@dimen/tam_letra"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/form_txv4"
                        android:textSize="@dimen/tam_letra"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_ncontrol"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:hint="No. Control"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/et_sem"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:hint="Semestre"
                        android:inputType="number" />
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_txv5"
                    android:textSize="@dimen/tam_letra"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_car_cur"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Carrera Actual"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:text="@string/form_txv6"
                    android:textSize="@dimen/tam_letra"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cve_CA"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="2.2"
                        android:gravity="center"
                        android:hint="Clave"
                        android:textSize="@dimen/tam_letra_cve" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_txv7"
                    android:textSize="@dimen/tam_letra"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sp_car"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <!--<TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:text="Clave de Plan de Estudios"
                    android:textSize="@dimen/tam_letra"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_car_C"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0" />
                </LinearLayout>-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_aceptar"
            style="@style/miStilo"
            android:layout_width="150.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="25.0dip"
            android:layout_marginBottom="10.0dip"
            android:onClick="singIn"
            android:text="@string/form_btn_txt"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>